parallax fix on mobile

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ html{
     /* background-image: url("img_parallax.jpg"); */
   
     /* Set a specific height */
-    min-height: 500px;
+    min-height: 100vh;
   
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
